# wordle

./: .gitignore  BENCHMARKS.md  Makefile  README.md  index.js
cpp/: .clang-format  CMakeLists.txt  Makefile  calc.cc  calc.h  main.cc  types.h  words.cc  words.h
rust/: Cargo.toml  Makefile  README.md
rust/src/: ext.rs  main.rs  matrix.rs  node.rs  outcome.rs  types.rs  util.rs  words.rs
rust/src/words/: answers.rs  guesses.rs  mod.rs
rust/words/: answers.rs  generate.js  run
src/: entropy.rs  logger.rs  main.rs  matrix.rs  node.rs  outcome.rs  solver.rs  types.rs  util.rs
src/words/: guesses.rs  mod.rs
words/: generate.js
